# amp-eval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PHASE6_EVALUATION_REPOS.md  PHASE8_IMPLEMENTATION_SUMMARY.md  README.md  README_PHASE7.md  WEBHOOK_SETUP.md  check_amp_auth.py  config.yaml  debug_amp_container.py  docker-compose.prod.yml  iam-policies.json  main.py  oracle_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_baseline.py  setup_cost_governance.py  setup_dev.py  test_simple_eval.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml  nightly.yml  security-scan.yml  self-hosted.yml
adapters/: amp_runner.py  config_schema.py  tool_call_interceptor.py
config/: agent_settings.yaml
dashboard/: alerting.py  metrics_store.py  requirements.txt  run_dashboard.sh  streamlit_app.py  webhook_test.py
docs/: AGENT_REFERENCE.md  CONTRIBUTING.md  COST_GOVERNANCE.md  DASHBOARD_GUIDE.md  LAUNCH_PLAN.md  MODEL_ADDITION.md  PHASE8_COST_GOVERNANCE.md  QUICK_START.md
evals/: cross_language_support.yaml  multi_file_refactoring.yaml  performance_optimization.yaml  real_world_scenarios.yaml  security_vulnerability_detection.yaml  tool_calling_micro.yaml  tool_calling_single.yaml
examples/: phase7_demo.py
scripts/: aggregate_results.ipynb  check_regression.py  create_smoke_eval.py  setup-runner.sh  setup_github_repo.sh  smoke_test.py  summarize_results.py
src/amp_eval/: __init__.py  amp_runner.py  audit_logger.py  cli.py  context_monitor.py  cost_cli.py  cost_tracking.py  quota_enforcer.py  rate_limiter.py  secrets.py
src/amp_eval/config/: agent_settings.yaml
src/amp_eval/evals/: oracle_knowledge.yaml  single_file_fix.yaml
src/amp_eval/evaluation/: dynamic_loader.py
src/amp_eval/graders/: __init__.py  base.py  builtin.py  plugin_loader.py  tool_call_accuracy.py
src/amp_eval/integrations/: feedback.py  slack.py
src/amp_eval/metrics/: custom_metrics.py
src/amp_eval/models/: __init__.py  anthropic_runner.py  base.py  local_runner.py  openai_runner.py
src/amp_eval/testing/: ab_framework.py
src/amp_eval/versioning/: version_manager.py
tasks/repos/algorithms/: fibonacci.py
tasks/repos/algorithms/tests/: test_fibonacci.py
tasks/repos/api_server/: README.md  app.py  test_auth_refactoring.py
tasks/repos/calc/: broken_calculator.py
tasks/repos/calc/tests/: test_calculator.py
tasks/repos/data_pipeline/: README.md  handlers.py  pipeline_runner.py  processor.py  test_renaming.py
tasks/repos/game_engine/: README.md  game_engine.py  test_splitting.py
tasks/repos/go_projects/: README.md  user_service.go  user_service_test.go
tasks/repos/js_projects/: README.md  legacy_api.js  monolithic_component.jsx  test_js_refactoring.test.js
tasks/repos/messaging/: README.md  message_handler.py  notifications.py  test_circular_imports.py  user_manager.py
tasks/repos/performance/: README.md  slow_processor.py  test_performance.py
tasks/repos/real_world/: README.md  legacy_migration.py  test_real_world.py
tasks/repos/rust_projects/: Cargo.toml  README.md
tasks/repos/rust_projects/src/: lib.rs  main.rs
tasks/repos/rust_projects/tests/: refactoring_tests.rs
tasks/repos/security/: README.md  test_security_fixes.py  vulnerable_app.py
tasks/repos/string_utils/: text_processor.py
tasks/repos/string_utils/tests/: test_text_processor.py
tasks/repos/web_app/: README.md  models.py  test_refactoring.py  utils.py  views.py
tests/: __init__.py  test_amp_runner.py
